# real_estate_crm_pe

./: .env  .gitignore  build.sh  db.sqlite3  pyproject.toml  render.yaml  requirements.txt
assets/css/: source.css  tailwind.css
assets/js/: toggle_theme.js
company_admin/: apps.py  urls.py  views.py
company_admin/templates/: _sidebar.html  dashboard.html  dashboard_base.html
components/templates/: alert.html  button.html  card.html  link.html
components/templatetags/: templatetags.py  ui_components.py
crm/: settings.py  urls.py
landing/: urls.py
landing/templates/: base.html  landing.html
landing/templatetags/: active_link.py
leads/: admin.py  forms.py  models.py  urls.py  views.py
leads/migrations/: 0001_initial.py  0002_lead_company.py
leads/templates/: lead_confirm_delete.html  lead_detail.html  lead_form.html  lead_list.html
properties/: admin.py  models.py  urls.py  views.py
properties/migrations/: 0001_initial.py  0002_remove_property_properties__company_5ff745_idx_and_more.py
properties/templates/: property_detail.html  property_form.html  property_list.html
reports/: forms.py  urls.py  views.py
reports/templates/: report_dashboard.html
settings/: urls.py  views.py
settings/templates/: _settings_sidebar.html  company_edit.html  company_info.html  company_view.html  security.html  subscription.html  user_management.html
tenants/: forms.py  managers.py  middleware.py  models.py
tenants/migrations/: 0001_initial.py  (+1 more)
transactions/: models.py
users/: forms.py  models.py  service.py  urls.py  views.py
(+12 files in other folders)
