[project]
name = "real-estate-crm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.7",
    "django-tailwind-cli>=4.1.0",
    "gunicorn>=23.0.0",
    "psycopg2>=2.9.10",
    "uvicorn>=0.34.0",
    "uvicorn-worker>=0.3.0",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=5.0.1",
    "django-typer[rich]>=3.0.0",
    "ruff>=0.9.10",
]

[tool.ruff]
target-version = "py313"
exclude = ["alembic", ".venv"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
